# neural-form-finding

./: .gitignore  AGENT_MEMORY.md  Injecting True Physics into Generative Design.md  LICENSE  README.md  environment.yml  main.py  param_search.py  pyproject.toml  test_viz.py  train.py
docs/: RELAUNCH_v2_campaign.md  hinge_dataset_v2_runbook.md  hinge_material_hypotheses.md  hinge_surrogate_condensation.md  hinge_surrogate_implementation_plan.md  hinge_surrogate_validation_plan.md
memory/: MEMORY.md  egnn_v2_improvements.md  feedback_validity_solver_role.md  project_egnn_v5_to_v8.md  project_gnn_foundations.md  project_jacobian_approach.md  project_validity_solver.md
nff/: __init__.py
notebooks/: comparison_elliptical_vs_polynomial.ipynb  complex_mapping_explorer.ipynb  demo_oracle.ipynb  diagnose_gnn_learning.py  gnn_benchmark.ipynb  gnn_experiences_comparison.ipynb  prototype_pipeline.ipynb  test_egnn_equivariance.py
scripts/: animate_closing.py  animate_hinge_loads.py  check_hinge_strips.py  check_hinges.py  extract_hinge_stiffness.py  figure_anchoring_gradient.py  figure_experiment_types.py  figure_gradient_challenge.py  figure_gradient_norms.py  make_pareto_plot.py  param_search.py  plot_hinge_convergence.py  random_search_c001.py  render_hinge_animations.py  simulate_loads_sofa.py  test_polar_incremental.py  test_training_animation.py  visualize_bezier_hinge.py  visualize_gmsh_mesh.py  visualize_hinge_run.py
sofa/: ARCHITECTURE.md  dump_results.py  example_inputs.json  geometry.py  hinge_geometry.py  hinge_optimizer.py  materials.py  mesh_builder.py  (+11 more)
(+220 files in other folders)
