[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-form-finding"
version = "0.1.0"
description = "Differentiable kirigami form-finding via GNN-driven geometric mapping and JAX physics."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "shapely",
    "pyyaml",
    "jax",
    "jaxlib",
    "optax",
    "jaxopt",
    "jraph",
    "equinox",
    "jaxtyping",
    "flax",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nff*"]

[tool.setuptools.package-dir]
"" = "."

[project.scripts]
nff-train = "nff.scripts.train:main"
